# map-locations

./: .cursorignore  .cursorrules  .flake8  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  README.md  ai_agent_main_prompt.md  ai_agent_prompt.md  make_map_files.sh  paris_london_trip_locations.yaml  paris_london_trip_locations_v2.yaml  paris_london_trip_locations_v3.yaml  passages.yaml  project_plan.md  pyproject.toml  requirements-ai.txt  requirements.txt  run_ai_pipeline.py  setup.py  try_openai_agent_for_enrichment.ipynb
.cursor/: settings.json
.github/workflows/: ci.yml
.specstory/history/: 2025-07-19_18-06Z-prepare-readme-for-mapping-library.md  2025-07-19_18-40Z-change-output-directory-to-maps-passages.md  2025-07-19_18-46Z-modify-examples-for-additional-formats.md  2025-07-19_18-52Z-suggest-a-useful-cursorrules-file.md  2025-07-19_18-57Z-add-code-for-packaging.md  2025-07-19_19-13Z-add-project-to-github.md  2025-07-19_19-19Z-create-a-reasonable-gitignore.md  2025-07-19_19-21Z-update-user-name-information.md  2025-07-19_19-28Z-upload-project-to-github.md  2025-07-19_19-37Z-force-core-py-to-always-use-cursor-context.md  2025-07-19_19-43Z-testing-the-function.md  2025-07-19_19-47Z-try-running-the-linting-process.md  2025-07-19_20-00Z-linting-and-fixing-code-issues.md  2025-07-19_20-23Z-change-default-grouping-by-location-type.md  2025-07-19_20-47Z-fix-code-issues-with-linting.md  2025-07-19_20-51Z-suggest-a-commit-message.md  2025-07-19_20-55Z-using-google-maps-as-default-service.md  2025-07-19_21-32Z-force-pre-commit-checks-on-commits.md  2025-07-19_22-11Z-add-info-for-google-maps-import.md  2025-07-19_22-20Z-update-exports-for-google-maps-location-types.md  2025-07-19_23-02Z-check-google-maps-kml-format-compliance.md  2025-07-19_23-20Z-untitled.md  2025-07-20_00-13Z-ignore-e231-error-in-linting.md  2025-07-20_01-12Z-customize-google-maps-icons-by-location-type.md  2025-07-20_01-24Z-configure-lint-rules-to-ignore-errors.md  2025-07-20_01-59Z-filter-locations-by-type-in-google-maps.md  2025-07-20_02-01Z-separate-location-groups-on-google-maps.md  2025-07-20_02-22Z-exporting-map-locations-for-paris-london-trip.md  2025-07-20_02-33Z-making-codebase-installable-as-a-package.md  2025-07-20_03-05Z-making-a-package-usable-by-ai-agents.md  2025-07-20_03-30Z-build-and-publish-python-package.md  2025-07-20_18-15Z-developing-a-two-headed-project-for-location-curation.md  2025-07-21_00-30Z-update-makefile-for-development-support.md  2025-07-21_03-19Z-check-github-pipeline-for-errors.md  2025-07-21_03-38Z-help-with-repository-description-line.md  2025-07-21_03-41Z-next-steps-in-the-project-plan.md  2025-07-21_12-32Z-prepare-prompt-for-thinking-agent.md  2025-07-21_16-29Z-prepare-yaml-from-trip-locations-data.md  2025-07-21_16-51Z-check-yaml-around-line-622.md  2025-07-22_00-37Z-identify-missing-london-attractions.md  (+17 more)
docs/: ai-agent-guide.md  api-reference.md  data-format.md  export-formats.md  extractors_plan.md  implementation-status.md  memory-agent-guide.md  standardized-location-types.md  user-guide.md
examples/: ai_agent_example.py  basic_usage.py  google_maps_example.py  memory_agent_example.py  sample_locations.yaml
map_locations/: __init__.py  categories.py  cli.py  core.py  core_modularization_plan.md  exporters.py  location_filters.py  map_generators.py  popup_generators.py  utils.py
map_locations/common/: __init__.py  formats.py  models.py
map_locations_ai/: OPENAI_README.MD  __init__.py  agent_prompt.txt  config.yaml  deduplicator.py  pipeline.py  plan.md  pyproject.toml  url_processor.py
map_locations_ai/agent/: __init__.py  enrichers.py  extraction_agent.py  extractors.py  pipeline.py  validators.py
map_locations_ai/data_sources/: __init__.py
map_locations_ai/evaluation/: __init__.py
map_locations_ai/interfaces/: __init__.py  cli.py  web_app.py
map_locations_ai/processors/: __init__.py  config_manager.py  enrichment_processor.py  file_manager.py  geocoding_service.py  llm_processor.py  location_converter.py  models.py  text_processor.py  trace_manager.py  url_verifier.py  yaml_processor.py
map_locations_ai/utils/: __init__.py  heuristics.py  net_utils.py  nlp_utils.py  tools.py
scripts/: build_ai.py  git-safe.sh  publish.sh  setup-ai.sh  setup-dev.sh  test_deduplication.py  test_extractors.py  update_version.py
tests/: __init__.py  test_ai_package.py  test_build_script.py  test_combined_build.py  test_core.py  test_examples.py  test_extractors_implementation.py  test_versioning.py
tests/test_assets/: user_input_01.txt  user_input_01_london.txt  user_input_01_london_short.txt  user_input_01_paris.txt  user_input_urls_minimal.txt
