[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "map-locations"
dynamic = ["version"]
description = "A Python library for mapping locations with interactive filtering and visualization capabilities"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Lavi Shpigelman", email = "shpigi+map.locations@gmail.com"}
]
maintainers = [
    {name = "Lavi Shpigelman", email = "shpigi+map.locations@gmail.com"}
]
keywords = [
    "maps",
    "locations",
    "folium",
    "yaml",
    "geojson",
    "kml",
    "gis",
    "geospatial",
    "data-visualization",
    "ai-friendly",
    "type-hints",
    "data-analysis"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "folium>=0.14.0",
    "pyyaml>=6.0",
    # AI package dependencies
    "beautifulsoup4>=4.11.0",
    "requests>=2.28.0",
    "psutil>=5.0.0",
    "gradio>=4.0.0",
    "smolagents[litellm]>=0.1.0",
    "spacy>=3.5.0",
    "validators>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
    "types-PyYAML",
    "types-requests",
    "pre-commit>=3.0.0",
    "twine>=4.0.0",
    "build>=1.0.0",
    "tomli>=1.2.0;python_version<\"3.11\"",
]

[project.scripts]
map-locations = "map_locations.cli:main"

[project.urls]
Homepage = "https://github.com/shpigi/map-locations"
Repository = "https://github.com/shpigi/map-locations"
Documentation = "https://github.com/shpigi/map-locations#readme"
"Bug Tracker" = "https://github.com/shpigi/map-locations/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["map_locations*", "map_locations_ai*"]

[tool.setuptools.dynamic]
version = {attr = "map_locations.__version__"}

[tool.black]
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=map_locations",
    "--cov=map_locations_ai",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["map_locations", "map_locations_ai"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
