[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "map-locations-ai"
dynamic = ["version"]
description = "AI agent for automatic location data curation and enrichment"
license = {text = "MIT"}
authors = [
    {name = "Lavi Shpigelman", email = "shpigi+map.locations@gmail.com"}
]
maintainers = [
    {name = "Lavi Shpigelman", email = "shpigi+map.locations@gmail.com"}
]
keywords = [
    "ai",
    "locations",
    "geocoding",
    "nlp",
    "data-extraction",
    "web-scraping",
    "automation",
    "travel",
    "tourism",
    "maps"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "validators>=0.20.0",
    "map-locations",  # Main package with common utilities
]

[project.optional-dependencies]
web = [
    "gradio>=4.0.0",
]
nlp = [
    "spacy>=3.5.0",
    "openai>=1.0.0",
]
google = [
    "googlemaps>=4.10.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "types-PyYAML",
]
all = [
    "map-locations-ai[web,nlp,google,dev]"
]

[project.urls]
"Homepage" = "https://github.com/shpigi/map-locations"
"Bug Reports" = "https://github.com/shpigi/map-locations/issues"
"Source" = "https://github.com/shpigi/map-locations"

[project.scripts]
map-locations-ai = "interfaces.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools.dynamic]
version = {attr = "map_locations_ai.__version__"}

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]
